--- a/home/server/package.json
+++ b/home/server/package.json
@@ -14,11 +14,10 @@
   "devDependencies": {
     "compression": "^1.6.1",
     "express": "^4.13.4",
-    "url": "^0.11.0",
-    "hapi": "8.6.1",
     "handlebars": "2.0.0",
     "node-cache": "3.2.1",
     "request": "2.65.0",
+    "body-parser" : "1.15.2",
     "cookie-parser" : "1.4.3"
   }
 }
