--- a/login/server/package.json
+++ b/login/server/package.json
@@ -16,6 +16,7 @@
     "node-cache": "3.2.1",
     "request": "2.65.0",
     "body-parser" : "1.15.2",
+    "jade": "1.11.0",
     "cookie-parser" : "1.4.3"
   }
 }
