--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 node_modules
+bower_components
 .tmp
 .sass-cache
 npm-debug.log
@@ -7,4 +8,4 @@ foo.log
 apps
 home/server/public
 login/server/public
-
+runner/server/public
