--- a/runner/build-files/bower.json
+++ b/runner/build-files/bower.json
@@ -16,7 +16,7 @@
   ],
   "dependencies": {
     "jquery": "~2.2.0",
-    "angular": "~1.4.8",
+    "angular": "1.5.8",
     "angular-route": "~1.4.8",
     "angular-animate": "~1.4.7",
     "angular-resource": "1.2.28",
@@ -26,8 +26,5 @@
     "font-awesome": "^4.5.0",
     "angular-strap": "^2.3.8",
     "ng-dialog": "^0.6.0"
-  },
-  "resolutions": {
-    "angular": "1.5.5"
   }
 }
